package maidsafe.priv.chunk_actions;

message Chunk {
  required bytes data = 1;
  required bytes signature = 2;
  required bytes signing_id = 3;
}

message Encrypted {
  required bytes symm_encrypted_data = 1;
  required bytes asymm_encrypted_symm_key = 2; 
}

message DeletionToken {
  required bytes data = 1;
  required bytes signature = 2;
}

// Message used to send owner's contact info to recipient for acceptance into
// recipient's contact list
message Introduction {
  required bytes mmid_name = 1;
  required bytes public_username = 2;
}

// Generic message for use in sending messages/files, sharing folders,
// annotating files, etc.
message Message {
  required int32 type = 1;
  required bytes id = 2;
  optional bytes parent_id = 3;
  required bytes sender_public_username = 4;
  repeated bytes content = 5;
  optional bytes timestamp = 6;
  optional bytes subject = 7;
}
